--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,67 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Visual Studio files
+.vs/
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build output
+bin/
+obj/
+out/
+
+# .NET Core / .NET 5+ generated files
+project.lock.json
+project.assets.json
+project.fragment.lock.json
+project.nuget.cache
+*.dbmdl
+*.pdb
+
+# NuGet Packages
+*.nupkg
+*.snupkg
+packages/
+.nuget/
+
+# Logs
+*.log
+logs/
+debug.log
+
+# OS-Specific
+.DS_Store
+Thumbs.db
+
+# Resharper / Rider / JetBrains IDEs
+.idea/
+*.sln.iml
+
+# Entity Framework Migrations
+Migrations/
+
+# ASP.NET temp files
+wwwroot/node_modules/
+wwwroot/lib/
+node_modules/
+dist/
+
+# Environment and Secrets
+.env
+secrets.json
+
+# Rider IDE
+.idea/
+*.sln.iml
+
+# Docker
+.dockerignore
+**/Dockerfile*
+**/docker-compose*
+
+# Python virtual environments (if any)
+venv/
+
+# Publish Artifacts
+publish/
